--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ button.css3button {
 
 body{
     font-family: 'Maven Pro Black';
-    font-size: 48px;
+    font-size: 27px;
     color: indianred;
     
     margin: auto;
@@ -44,4 +44,11 @@ button{
     font-family: 'Maven Pro Black';
     font-size: 24px;
     color:cornflowerblue;
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
 }
